--- a/CSS/grid.css
+++ b/CSS/grid.css
@@ -21,10 +21,31 @@
 .item5
 {
     /* grid-column: 1/4; */
-    grid-row: 1/4;
+    /* grid-row: 1/4; */
     /* grid-column: 1/span 2; */
     /* grid-row: 1/span 3; */
     /* grid-area: 1/1/3/3; */
     /* grid-area: 1/1/span 2/span 3; */
 
+}
+
+/* @media screen and (min-width: 800px)
+{
+    .container
+    {
+        grid-template-columns: auto auto;
+    }
+} */
+
+
+@media screen and (max-width: 800px)
+{
+    .container
+    {
+        grid-template-columns: auto auto;
+    }
+    .container > .item5
+    {
+        grid-column: 1/3;
+    }
 }
