--- a/CSS/grid.css
+++ b/CSS/grid.css
@@ -20,10 +20,10 @@
 
 .item5
 {
-    /* grid-column: 1/4; */
-    /* grid-row: 1/4; */
-    /* grid-column: 1/span 2; */
-    /* grid-row: 1/span 3; */
+    /* grid-column: 2/4; */
+    /* grid-row: 2/3; */
+    /* grid-column: 1/span 3; */
+    /* grid-row: 1/span 2; */
     /* grid-area: 1/1/3/3; */
     /* grid-area: 1/1/span 2/span 3; */
 
@@ -37,7 +37,7 @@
     }
 } */
 
-
+/* 
 @media screen and (max-width: 800px)
 {
     .container
@@ -48,4 +48,4 @@
     {
         grid-column: 1/3;
     }
-}
+} */
