--- a/CSS/Homework1.css
+++ b/CSS/Homework1.css
@@ -31,6 +31,21 @@
     visibility: visible;
 }
 
+.pagination
+{
+    display: inline-block;
+}
+
+.pagination a
+{
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    font-size: 20px;
+
+}
+
 /* .container
 {
     display: grid;
