--- a/CSS/Homework1.css
+++ b/CSS/Homework1.css
@@ -36,7 +36,7 @@
     display: inline-block;
 }
 
-.pagination a
+/* .pagination a
 {
     color: black;
     float: left;
@@ -44,7 +44,45 @@
     text-decoration: none;
     font-size: 20px;
 
+} */
+
+/* Navbar */
+
+.topnav
+{
+    background-color: #3d4a41;
+    overflow: hidden;
 }
+
+.topnav a
+{
+    font-family: 'Source Sans Pro', sans-serif;
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.topnav a:hover
+{
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active
+{
+    background-color: #4caf50;
+    color: white;
+}
+
+
+
+
+/* height: 50px ;
+font-size: 30px;
+padding: 5px 16px; */
 
 /* .container
 {
