--- a/hwgridflex/grid.css
+++ b/hwgridflex/grid.css
@@ -1,10 +1,91 @@
+ul
+{
+    background-color: black;
+    /* width: 80%; */
+    margin: 0 auto;
+    padding: 0;
+    overflow: hidden;
+}
+
+li
+{
+    float: left;
+}
+
+li a
+{
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li input
+{
+    display: inline-block;
+    padding: 5px ;
+    margin: 10px ;
+    text-align: right;
+
+}
+
+img
+{
+    width: 95%;
+    height: 300px;
+    margin: 10px;
+    padding: 10px;
+}
+
+.topcontainer
+{
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    background-color: lightpink;
+    text-align: center;
+
+}
+
+.topcontainer > div
+{
+    background-color: lightgreen;
+    margin: 10px;
+}
+
+.topcontainer > div > img
+{
+    width: 95%;
+    margin: 20px;
+}
+
+div > .topitem1
+{
+    background-color: lightseagreen;
+    grid-row: 1/3;
+}
+
+.topitem1 > img
+{
+    height: 26vh;
+    margin: 10px;
+}
+
+
+
+
+
+
+
+
+
 .container
 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr ;
     /* grid-gap: 20px; */
     background-color: #ffdc85;
-    width: 80%;
+    /* width: 95%; */
     margin: 0 auto;
 
 }
@@ -12,7 +93,7 @@
 .container > div
 {
     background-color: lightskyblue;
-    height: 200px;
+    height: 400px;
     text-align: center;
     margin: 20px;
 }
