--- a/HWweek1/h2.css
+++ b/HWweek1/h2.css
@@ -1,14 +1,18 @@
 label
 {
-    margin: 10px;
+    margin-left: 30px;
+    margin-right: 20px;
     padding: 10px;
 }
 
 select
 {
-    margin: 10px;
+    margin-top: 10px;
+    margin-left: 50px;
+    margin-right: 10px;
+    margin-bottom: 10px;
     padding: 10px;
-    width: 40px;
+    width: 70px;
 }
 div >form
 {
@@ -17,6 +21,22 @@ div >form
 
 .num > input
 {
-    background-color: chocolate;
     width: 20px;
+    margin-left: 35px;
+    margin-right: 35px;
+}
+
+form>input
+{
+    margin-top: 10px;
+    margin: 10px;
+}
+
+button
+{
+    margin-right: 10px;
+    margin-left: 20px;
+    margin-top: 10px;
+    height: 30px;
+    width: 100px;
 }
